# radar_de_reputacao_reclameaqui

./: .gitignore  README.md  collect.py  collect_clique.py  pyproject.toml  requirements.txt
config/: companies_list.yaml  settings.yaml
notebooks/: cleaning.ipynb
scripts/: collect_data.py  main.py
src/analyzers/: __init__.py
src/collectors/: __init__.py  collect_links.py  collect_links_data.py  reclame_aqui_collector.py
src/processors/: __init__.py  data_cleaner.py
streamlit_app/: app.py
